--- a/src/scss/_hacks.scss
+++ b/src/scss/_hacks.scss
@@ -54,13 +54,14 @@ b{
 
 .sect{
 	&-title{
-		font-size: 54px;
-		font-weight: 700;
+		font-size: 38px;
+		// font-weight: 700;
 		// font-family: $f-m;	
-		margin-bottom: 40px;
+		margin-bottom: 50px;
 		line-height: 1.2;
-		text-transform: uppercase;
-		line-height: 0.8;
+		// text-transform: uppercase;
+		// line-height: 0.8;
+		text-align: center;
 	}
 	&-descr{
 		font-size: 24px;
