--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,18 +14,35 @@
 body{
 	font-family: $f-h-c, Helvetica, sans-serif;
 	font-weight: 300;
-	font-size: 15px;
+	font-size: 16px;
 	// color: $c-bck;
 	line-height: 1.5;
-	background-color: #fff;
+	background-color: $c-wh;
 	opacity: 0;
 	transition: opacity .3s linear;
+	position: relative;
 	&.loaded{
 		opacity: 1;
 	}
 }  
 
 .head{
+	padding-top: 40px;
+	padding-bottom: 40px;
+	// transition: all .6s ease;
+	background-color: $c-wh;				
+	
+	&.active{
+		position: fixed;
+		z-index: 9;
+		left: 0;
+		right: 0;
+		top: 0;
+		padding-top: 10px;
+		padding-bottom: 10px;
+		box-shadow: 0 0 15px #cccccc;
+		animation: navAppear 0.6s;
+	}
 	&__itt{
 		p{
 			position: relative;
@@ -145,5 +162,215 @@ body{
 	}
 }
 
+.stepp{
+	&__img{
+		width: 113px;
+		height: 113px;
+		background-color: $c-bl;
+		border-radius: 50%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin: 10px auto 30px;
+	}
+	&__inn{
+		text-align: center;
+		margin-top: 40px;
+		margin-bottom: 50px;
+	}
+}//.stepp
+
+
+.offerr{
+	&__img{
+		min-height: 178px;
+
+	}
+	&__lisst{
+		display: flex;
+		flex-wrap: wrap;	
+		justify-content: space-between;
+	}
+	&__itt{
+		flex-basis: 30%;
+		border: 1px solid #E9EAEB;
+		border-radius: 5px;
+		margin-bottom: 30px;
+		box-shadow: -4px 0 10px #cccccc;
+		transition: all .3s ease;
+		&:hover{
+			border: 1px solid $c-yw;
+
+		}
+	}
+	&__titl{
+		text-transform: uppercase;
+		font-size: 17px;
+		text-align: center;
+		margin-bottom: 15px;
+	}
+	&__bulls{
+		list-style-type: none;
+		li{
+			margin-bottom: 15px;
+			line-height: 1.2;
+			padding-left: 25px;
+			position: relative;
+			&:before{
+				content: "";
+				width: 12px;
+				height: 12px;
+				background-color: $c-yw;
+				position: absolute;
+				left: 0;
+				top: 4px;
+				border-radius: 50%;
+			}
+		}	
+	}
+	&__txt{
+		padding: 30px 25px;
+	}
+}
+
+
+.partt{
+	&__itt{
+		border: 1px solid #E9EAEB;
+		min-height: 100px;
+		display: flex !important;
+		align-items: center;
+		justify-content: center;
+		padding: 10px;
+		margin-right: 10px;
+		margin-left: 10px;
+	}
+	
+	&__sliddr{
+		&-wrapp{
+			padding-left: 20px;
+			padding-right: 20px;
+			position: relative;
+			margin: 60px 0;
+		}
+		&-control{
+			position: absolute;
+			top: 50%;
+			margin-top: -17px;
+			cursor: pointer;
+		}
+		&-prev{
+			left: 0;				
+		}	
+		&-next{
+			right: 0;
+		}
+	}
+
+}//.partt
+
+
+.reww{
+	&__sliddr{
+		
+		&-wrapp{
+			position: relative;
+			padding-left: 20px;
+			padding-right: 20px;
+		}
+
+		&-itt{
+			position: relative;
+			cursor: pointer;
+			// margin-left: 15px;
+			// margin-right: 15px;
+			img{
+				margin-left: auto;
+				margin-right: auto;
+			}			
+		}
+
+		&-prev{
+			left: 0;
+		}
+		&-next{
+			right: 0;
+		}
+	}
+}
+
+.imgg__overr{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: none;
+	padding: 100px;
+	text-align: center;
+	animation: logAppear 0.6s;
+	overflow-y: auto; 
+	&-wrr{
+		display: inline-block;
+		position: relative;
+		box-shadow: 0 0 30px #cccccc;
+	}
+	&-cloz{
+		position: absolute;
+		z-index: 9;
+		right: -30px;
+		top: 0px;
+		color: red;
+		font-weight: bold;
+		font-size: 40px;
+		cursor: pointer;
+	}
+	img{
+		display: inline-block;
+	}
+}
+
+.footer-1{
+	border-top: 1px solid #DCDCDC;
+	border-bottom: 1px solid #DCDCDC;
+	padding-top: 30px;
+	padding-bottom: 30px;
+	font-size: 18px;
+	a{
+		text-decoration: underline;
+		color: $c-bl;
+		&:hover{
+			text-decoration: none;
+		}
+	}
+	&__wrr{
+		text-align: center;
+	}
+}
+
+
+@keyframes navAppear {
+  0%{
+  	opacity: 0;
+  	transform: translateY(-200px);
+  }
+  100% { 	
+  	opacity: 1;
+  	transform: translateY(0px);
+ }
+}
+
+
+
+@keyframes logAppear {
+  0%{
+  	opacity: 0;
+  	transform: scale(0, 0);
+  }
+  100% { 	
+  	opacity: 1;
+  	transform: scale(1, 1);
+ }
+}
 
 @import "media";
