--- a/src/scss/_hacks.scss
+++ b/src/scss/_hacks.scss
@@ -209,7 +209,7 @@ h5{
 a{ 
 	transition: all .3s ease-out;
 	text-decoration: none;
-	// color: $c-red;
+	color: $c-bl;
 	&:hover{
 		// color: darken( $c-red, 10 );
 		text-decoration: underline;
