--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -111,6 +111,24 @@ body{
 			}
 		}
 	}
+	&-sub{
+		&__menu{
+			list-style-type: none;
+			li{
+				display: inline-block;
+			}
+			.act{
+				a{
+					box-shadow: inset 0 -3px 0  $c-bl;
+					color: $c-bck;
+				}
+			}
+			a{
+				display: block;
+				padding: 15px 10px;
+			}
+		}
+	}
 }
 
 .jum{
@@ -183,14 +201,19 @@ body{
 			display: flex;
 			flex-wrap: wrap;
 			justify-content: space-between;
-			button{
+			.button{
 				background-color: transparent;
 				border-radius: 4px;
 				border: 1px solid #B3B3B3;
 				flex-basis: 48.5%;
 				margin-bottom: 15px;
 				height: 40px;
-				
+				text-align: center;
+				line-height: 38px;
+				color: $c-bck;
+				&:hover{
+					text-decoration: none;
+				}
 			}
 			.acct{
 				background-color: $c-yw;
@@ -607,6 +630,11 @@ body{
 	}
 } //.knoww
 
+
+.mapp{
+	min-height: 500px;
+	width: 100%;
+}
 
 @keyframes navAppear {
   0%{
