--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -6,7 +6,49 @@
 	
 }
 @media (max-width: 1200px){
-	
+	.container{
+		padding-left: 10px;
+    padding-right: 10px;
+	}
+	.row {
+    margin-left: -10px;
+    margin-right: -10px;
+	}
+	.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+    padding-left: 10px;
+    padding-right: 10px;
+	}
+	.nav{
+		display: none;
+	}
+	.nav-sub{
+		display: none;
+	}
+	body{
+		padding-top: 60px;
+	}
+	.head{
+		padding-top: 5px;
+		padding-bottom: 5px;
+		&__itt{
+			&-2{
+				display: none;
+			}
+			&-3{
+				display: none;
+			}
+			&-4{
+				display: none;
+			}
+			&-5{
+				display: none;
+			}
+
+		}
+	}
+	.d-n-1200{
+		display: none;
+	}
 }
 
 @media (max-width: 1140px){
@@ -22,7 +64,11 @@
 }
 
 @media (max-width: 768px){
-
+	.offerr{
+		&__lisst{
+			display: block;
+		}	
+	}
 }
 
 @media (max-width: 749px){
