--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -47,7 +47,37 @@
 		}
 	}
 	.d-n-1200{
-		display: none;
+		// display: none;
+		// position: static;
+	}
+	.jum{
+		z-index: 9;
+		// position: static;
+		&__wrr-1{
+			&.jum__wrr{
+				position: fixed;
+				z-index: 99999;
+				top: 0px;
+				left: 0;
+				display: none;
+				animation: navAppear 0.6s;
+			}	
+		}	
+	}
+	.jum{
+		.butt{
+			font-size: 14px;
+		}
+	}
+	.butt{
+		font-size: 14px;
+		padding-left: 15px;
+		padding-right: 15px;
+	}
+	.to-calcc{
+		display: inline-block;
+		
+
 	}
 }
 
@@ -60,14 +90,165 @@
 }
 
 @media (max-width: 880px){
-	
+	.imgg__overr{
+		padding-left: 0;
+		padding-right: 0;
+		&-cloz{
+			right: 20px;
+		}
+	}
+	.pts1{
+		&__lisst{
+			display: block;
+		}
+		&__img{
+			margin-bottom: 0;
+			img{
+				max-width: 112px;
+			}
+			&:after{
+				display: none;
+				// left: 20px;
+				// bottom: -25px;
+				// right: auto;
+    // 		top: auto;
+    // 		z-index: 9;
+			}
+		}
+		&__inn{
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			margin-bottom: 35px;
+			&:last-child{
+				height: 150px;
+				.pts1__img{
+					width: 100%;
+				}
+			}
+		}
+		&__txt{
+			margin-top: 0;
+			flex: 1;
+			padding-left: 20px;
+		}	
+	}
 }
 
 @media (max-width: 768px){
+	.mapp{
+		min-height: 350px;
+	}
+	.knoww{
+		&__blck{
+			&-it{
+				flex-basis: 50%;
+			}
+		}
+		&__input{
+			&-wrr{
+				// flex-basis: 100% !important;
+				&-2{
+					display: block;
+				}
+			}
+		}
+		&__submit{
+			display: block;
+			width: 100%;
+			margin-top: 20px;
+		}
+	}
+
+	.s{
+		padding-top: 30px;
+		padding-bottom: 30px;
+	}
+	.featt{
+		padding-top: 50px;
+		&__wrr{
+			display: flex;
+			align-items: center;
+		}
+		&__img{
+			margin-bottom: 0;
+		}
+		&__blck{
+			&:last-child{
+				flex: 1;
+				// text-align: left;
+				padding-left: 10px;
+			}
+		}
+		&__img{
+			max-width: 100px;
+		}
+	}
+	.sect-title{
+		font-size: 30px;
+	}
+	.jum{
+		&__lisst{
+			&.offerr__bulls{
+				display: none;
+			}
+		}
+		.container{
+			width: 100%;
+		}
+		&__sliddr{
+			&-dots{
+				display: none;
+			}
+		}
+	} 
 	.offerr{
 		&__lisst{
 			display: block;
 		}	
+	}
+	.stepp{
+		&__img{
+			margin-bottom: 10px;
+			// flex-basis: 113px;
+			&:after{
+				display: none;
+			}
+		}
+		&__inn{
+			margin: 0;
+			display: flex;
+			align-items: center;
+			justify-content: flex-start;
+			p{
+				flex: 1;
+				text-align: left;
+				padding-left: 20px;
+			}
+		}
+	}
+	.copyr{
+		font-size: 14px;
+		margin-bottom: 20px;
+	}
+	.footer{
+		&-2{
+			&__soc{
+				text-align: center;
+				margin-bottom: 30px;
+				margin-top: 0;
+				li{
+					margin-left: 10px;
+					margin-right: 10px;
+				}
+			}
+		}
+	}
+
+	.podzal1{
+		&__list{
+			padding-left: 0;
+		}
 	}
 }
 
@@ -80,5 +261,13 @@
 }
 
 @media (max-width: 480px){
-	
+	.podzal1{
+		&__list{
+			display: block;
+		}
+		&__it{
+			display: block;
+			margin-bottom: 40px;
+		}
+	}
 }
