--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -200,6 +200,10 @@ body{
 			min-height: 439px;
 			position: relative;
 		}
+		&-over{
+			padding: 20px;
+			background: rgba( $c-wh, 0.7 );
+		}
 	}
 	&__calc{
 		&-wrr{
@@ -263,8 +267,12 @@ body{
 	}
 	&__lisst{
 		font-size: 17px;
-		margin-top: 30px;
+		margin-top: 20px;
 		font-weight: 400;
+		margin-bottom: 0 !important;
+		li{
+			margin-bottom: 8px !important;
+		}	
 	}
 	&__cont{
 		&-slider{
@@ -297,8 +305,17 @@ body{
 				.jum__lisst{
 					transform: translateY(0px);
 					opacity: 1;	
+					li{
+						&:last-child{
+							margin-bottom: 0;
+						}
+					}
 				}
-			}	
+			}	 
+		}
+		&-itt{
+			padding: 20px;
+			background-color: rgba( $c-wh, 0.7 );
 		}
 	}
 }//.jum
@@ -759,10 +776,18 @@ body{
 	height: 100%;
 	background-color: rgba( 255, 255, 255, 0.6 );
 	overflow-y: auto;
-	padding: 100px 0;
-	z-index: 99;
+	padding: 40px 0;
+	z-index: 9999;
 	display: none;
 	animation: faddeIn 0.6s;
+	&__cloz{
+		position: absolute;
+		color: red;
+		font-size: 30px;
+		top: 45px;
+		right: 15px;
+		cursor: pointer;
+	}
 }
 
 @keyframes faddeIn {
