--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -117,10 +117,11 @@
 		// position: static;
 		&__wrr-1{
 			&.jum__wrr{
-				position: fixed;
-				z-index: 99999;
-				top: 0px;
-				left: 0;
+				// position: absolute;
+				width: 100%;
+				// z-index: 99999;
+				// top: 0px;
+				// left: 0;
 				display: none;
 				animation: navAppear 0.6s;
 			}	
